docs: update body to formData
